# mudirc

./: .gitmodules  CMakeLists.txt  LICENSE.txt  Makefile  README.md  autogen.ps1  autogen.sh
cmake/: config.cmake  sanitizers.cmake
sources/database/: CMakeLists.txt
sources/database/src/: cqlrt_common.c
sources/database/tools/sqlgen/: compiler.c  compiler.h  main.c  templates.c  templates.h  vec.c  vec.h
sources/game/: CMakeLists.txt
sources/game/include/game/: appstate.h  bot.h  command.h  db.h  event-loop.h  lifecycle.h
sources/game/include/game/core/: bot.h  command.h  event-loop.h
sources/game/include/game/database/: conn.h
sources/game/sql/: main.sql  schema-migration.sql
sources/game/src/: appstate.c  bot.c  command.c  db.c  event-loop.c  lifecycle.c  main.c
sources/game/src/commands/game/: query.c  unknown.c
sources/game/src/commands/priv/: list.c  unknown.c
sources/game/src/core/: bot.c  event-loop.c  lifecycle.c
sources/game/src/core/commands/: command.c
sources/game/src/core/commands/game/: query.c  unknown.c
sources/game/src/core/commands/priv/: list.c  unknown.c
sources/game/src/database/: conn.c
sources/game/src/init/: bot.c  conn.c  database.c  lifecycle.c  netlib.c
sources/ircbot/: CMakeLists.txt
sources/ircbot/include/ircbot/: client.h  handler.h  message.h
sources/ircbot/src/: client.c  handler.c  message.c
sources/preludec/: CMakeLists.txt
sources/preludec/include/preludec/: defs.h  math.h
sources/preludec/include/preludec/algo/: hash.h  sort.h
sources/preludec/include/preludec/chrono/: time.h
sources/preludec/include/preludec/collections/: vec.h
sources/preludec/include/preludec/io/: stream.h
sources/preludec/include/preludec/mem/: align.h  alloc.h  arena.h  span.h  str.h
sources/preludec/include/preludec/net/: conn.h  lib.h  set.h  socket.h
sources/preludec/include/preludec/sync/: chan.h  coro.h  time.h
sources/preludec/src/algo/: hash.c  sort.c
sources/preludec/src/chrono/: time.c  time_posix.inc  time_win32.inc
sources/preludec/src/io/: stream.c
sources/preludec/src/mem/: alloc.c  arena.c  span.c  str.c
sources/preludec/src/net/: conn.c  lib.c  set.c
sources/preludec/src/sync/: coro.c  time.c
sources/sqlite3/: CMakeLists.txt
tools/cql/: CMakeLists.txt
tools/cql/src/: cql_amalgam.c
